<resources>
    <string name="app_name">Sebatik</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="phone_or_whatsapp_number">Phone or WhatsApp Number</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="product_image">product image</string>
    <string name="scan">Scan</string>
    <string name="batik_name">Batik Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="btn_post">POST</string>
    <string name="author">Seller</string>
    <string name="contact_author">contact_author</string>
    <string name="big_btn_title">Scan your Batik and Unlock the Stories</string>
    <string name="latest_product">Latest Product</string>
    <string name="see_all">See All</string>
    <string name="add_product">add product</string>
    <string name="scan_warning">Please enter your batik picture, make sure the photo only contains a batik, if not it will affect to the result</string>
    <string name="button_to_gallery">button to gallery</string>
    <string name="button_to_camera">button to camera</string>
    <string name="our_team">Our Team</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">profile picture</string>
    <string name="c241_ps260">C241-PS260</string>
    <string name="android_developer">Android Developer</string>
    <string name="MD_1">Name : Rama Adji Prasetyo\nEmail : a211d4ky4261@bangkit.academy</string>
    <string name="MD_2">Name : Dovan Nadhif Aqhari\nEmail : a009d4ky4251@bangkit.academy</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="CC_1">Name : Dimas Di Ajeng Duwi Saputra\nEmail : c211d4ky0482@bangkit.academy</string>
    <string name="CC_2">Name : Diva Annisa Elvina\nEmail : c288d4kx0178@bangkit.academy</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="ML_1">Name : Aditya Fathan Santoso\nEmail : m271d4ky2369@bangkit.academy</string>
    <string name="ML_2">Name : Melani Putri Azalia\nEmail : m009d4kx2987@bangkit.academy</string>
    <string name="ML_03">Name : Shafira Alayna Fathih\nEmail : m009d4kx2949@bangkit.academy</string>
    <string name="success">Success</string>
    <string name="upload_success">Upload Success</string>
    <string name="product_uploaded">Your Product has been successfully uploaded</string>
    <string name="error">Error</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="uploading">Uploading…</string>
    <string name="country_code">+62</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_field">Please Fill all Fields</string>
    <string name="register_success">Register Success</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="scan_your_batik">Scan Your Batik</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>
    <string name="upload_product">Upload Product</string>
    <string name="scan_result">Scan Result</string>
    <string name="discover_your_batik_stories">Discover Your Batik Stories</string>
    <string name="find_your_perfect_fit">Find Your Perfect Fit</string>
    <string name="indonesian_batik">Indonesian Batik</string>
</resources>