<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_rounded"
            android:backgroundTint="@color/green"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/scan_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/border"
            android:contentDescription="@string/product_image"
            android:padding="8dp"
            android:src="@drawable/scanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/brown"
            android:contentDescription="@string/button_to_camera"
            android:padding="8dp"
            android:src="@drawable/baseline_camera_alt_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_scan" />

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/brown"
            android:contentDescription="@string/button_to_gallery"
            android:padding="8dp"
            android:src="@drawable/baseline_folder_24"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toTopOf="@+id/btn_camera" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/background_button"
            android:drawableLeft="@drawable/icon_scan"
            android:gravity="center"
            android:text="Scan your batik"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@+id/tv_notes" />

        <TextView
            android:id="@+id/tv_result_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery" />

        <TextView
            android:id="@+id/tv_result_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>